--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -1,26 +1,26 @@
 {% extends 'vol/base.html' %}
-{% block title %} Nouveau pilote {% endblock %}
+{% block title %} Nouveau type d'avion {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau Pilote</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau type d'avion</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
-        {{ form_pilote.non_field_errors }}
+        {{ form_type_avion.non_field_errors }}
 
         <div class="form-row">
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_pilote.prenom.errors }}
-                    {{ form_pilote.prenom.label_tag }}
-                    {{ form_pilote.prenom|add_class:"form-control" }}
+                    {{ form_type_avion.type_avion.errors }}
+                    {{ form_type_avion.type_avion.label_tag }}
+                    {{ form_type_avion.type_avion|add_class:"form-control" }}
                 </div>
             </div>
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_pilote.nom.errors }}
-                    {{ form_pilote.nom.label_tag }}
-                    {{ form_pilote.nom|add_class:"form-control" }}
+                    {{ form_type_avion.nb_moteurs.errors }}
+                    {{ form_type_avion.nb_moteurs.label_tag }}
+                    {{ form_type_avion.nb_moteurs|add_class:"form-control" }}
                 </div>
             </div>
         </div>
@@ -34,27 +34,29 @@
 
 
     <div class="row">
-        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des pilotes</h2></div>
+        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des types d'avions</h2></div>
     </div>
-    {% if pilotes_list %}
+    {% if type_avion_list %}
         <div class="row">
             <div class="col">
                 <table class="table table-striped table-bordered table-hover table-sm dt-responsive nowrap" id="table_id">
                     <thead>
                     <tr class="thead-dark">
-                        <th scope="col">Pilote</th>
+                        <th scope="col" style="width: 45%">Type d'avion</th>
+                        <th scope="col" style="width: 45%">Nombre de moteurs</th>
                         <th scope="col" style="width: 10%">Actions</th>
                     </tr>
                 </thead>
                     <tbody>
-                        {% for pilote in pilotes_list %}
+                        {% for type_avion in type_avion_list %}
                             <tr>
-                                <td>{{ pilote.prenom }} {{ pilote.nom }}</td>
+                                <td>{{ type_avion.type_avion }}</td>
+                                <td>{{ type_avion.nb_moteurs }}</td>
                                     <td class="text-center">
-                                        <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier le pilote" href="{% url 'edit_pilote' pk=pilote.pk %}">
+                                        <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier le type d'avion" href="{% url 'edit_type_avion' pk=type_avion.pk %}">
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-pencil-alt"></i></button>
                                         </a>
-                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le pilote" href="{% url 'remove_pilote' pk=pilote.pk %}" onclick="return confirm('Are you sure you want to delete this?')">
+                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le type d'avion" href="{% url 'remove_type_avion' pk=type_avion.pk %}" onclick="return confirm('Are you sure you want to delete this?')">
                                             <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
                                         </a>
                                     </td>
@@ -66,7 +68,7 @@
             </div>
         </div>
     {% else %}
-        <p>Il n'y a pas de pilotes enregistrés.</p>
+        <p>Il n'y a pas de types d'avions enregistrés.</p>
     {% endif %}
 
 {% endblock %}
