--- a/vol/templates/vol/immatriculation_add.html
+++ b/vol/templates/vol/immatriculation_add.html
@@ -1,8 +1,10 @@
 {% extends 'vol/base.html' %}
-{% block title %} Nouvelle immatriculation {% endblock %}
+{% block title %} Nouvel avionimmatriculation {% endblock %}
 {% block content %}
+
+
  <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouvelle immatriculation</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouvel avion</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_immatriculation">{% csrf_token %}
@@ -23,7 +25,7 @@
                     <div class="input-group">
                         {{ form_immatriculation.type_avion|add_class:"form-control" }}
                         <div class="input-group-append">
-                            <div class="input-group-text"><a href="" target="_blank">+</a></div>
+                            <div class="input-group-text"><a class="management_links" data-toggle="tooltip" data-placement="top" title="Ajouter un type d'avion" href="{% url 'new_type_avion' %}">+</a></div>
                         </div>
                     </div>
                 </div>
@@ -37,6 +39,43 @@
         </div>
     </form>
 
+<div class="row">
+        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des avions</h2></div>
+    </div>
+    {% if immatriculation_list %}
+        <div class="row">
+            <div class="col">
+                <table class="table table-striped table-bordered table-hover table-sm dt-responsive nowrap" id="table_id">
+                    <thead>
+                    <tr class="thead-dark">
+                        <th scope="col" style="width: 45%">Immatriculation</th>
+                        <th scope="col" style="width: 45%">Type d'avion</th>
+                        <th scope="col" style="width: 10%">Actions</th>
+                    </tr>
+                </thead>
+                    <tbody>
+                        {% for immatriculation in immatriculation_list %}
+                            <tr>
+                                <td>{{ immatriculation.immatriculation }}</td>
+                                <td>{{ immatriculation.type_avion }}</td>
+                                    <td class="text-center">
+                                        <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier l'avion" href="{% url 'edit_immatriculation' pk=immatriculation.pk %}">
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-pencil-alt"></i></button>
+                                        </a>
+                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer l'avion" href="{% url 'remove_immatriculation' pk=immatriculation.pk %}" onclick="return confirm('Are you sure you want to delete this?')">
+                                            <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                        </a>
+                                    </td>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {% else %}
+        <p>Il n'y a pas d'immatriculations enregistrées.</p>
+    {% endif %}
 
 
 {% endblock %}
