--- a/vol/templates/vol/pilote_added_successfully.html
+++ b/vol/templates/vol/pilote_added_successfully.html
@@ -1,10 +1,10 @@
-{% extends 'vol/base_no_container.html' %}
+{% extends 'vol/base.html' %}
 {% block title %} Nouveau pilote {% endblock %}
 {% block content %}
- <div class="row">
-    <div class="col"><h2 class="h4 mt-4 mb-4">Nouveau pilote</h2></div>
-</div>
     <div class="row">
-        <div class="col"><h2 class="h4 mt-4 mb-4">Nouveau pilote ajouté avec succès. Veuillez fermer la     fenêtre.</h2></div>
+        <div class="col"><h2 class="h4 mt-4 mb-4">Nouveau pilote ajouté avec succès.</h2></div>
+    </div>
+    <div class="row">
+        <div class="col"><a class="btn btn-primary" role="button" href="{% url 'new_pilote' %}">Retour</a></div>
     </div>
 {% endblock %}
