Affichage de la durée en hh:mm

--- a/vol/templates/vol/vol_add.html
+++ b/vol/templates/vol/vol_add.html
@@ -258,7 +258,7 @@ calculate = function(day) {
         minutes = minutes*100;
         minutes = Math.round(minutes);
         minutes = minutes/100
-        document.getElementById('id_duree_'+day).value = hour + ":" + minutes + ":00";
+        document.getElementById('id_duree_'+day).value = hour + ":" + minutes;
     }
 }
 // $('.datepicker').datepicker({
