--- a/vol/templates/vol/vol_add.html
+++ b/vol/templates/vol/vol_add.html
@@ -168,25 +168,32 @@
                     </h5>
                     <div id="collapseOne3" class="collapse">
                         <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <div class="fieldWrapper">
+                            <div class="form-group col-md-4">
+                                <div class="fieldWrapper custom-control custom-checkbox">
                                     {{ form.vol_simu.errors }}
-                                    {{ form.vol_simu.label_tag }}
-                                    {{ form.vol_simu|add_class:"form-control" }}
+                                    <input type="checkbox" class="custom-control-input" id="{{ form.vol_simu.id_for_label }}">
+                                    <label class="custom-control-label" for="{{ form.vol_simu.id_for_label }}">{{ form.vol_simu.label }}</label>
+                                    
+                                    {# {{ form.vol_simu }} #}
                                 </div>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <div class="fieldWrapper">
                                     {{ form.duree_simu.errors }}
                                     {{ form.duree_simu.label_tag }}
                                     {{ form.duree_simu|add_class:"form-control" }}
                                 </div>
                             </div>
+                            <div class="form-group col-md-4">
+                                <label>Conversion</label>
+                                <input type="text" name="base_10" id="deci_simu" class="form-control form-control" placeholder="Durée simu" onkeyup="calculate('simu');">
+                            </div>
                         </div>
                     </div>
                   </div>
                 </div>
             </div>
+
             <div class="form-group col-md-4">
                 <div id="accordion3" data-children=".itemAccordion">
                   <div class="itemAccordion">
@@ -197,19 +204,23 @@
                     </h5>
                     <div id="collapseOne4" class="collapse">
                         <div class="form-row">
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <div class="fieldWrapper">
                                     {{ form.vol_ifr.errors }}
                                     {{ form.vol_ifr.label_tag }}
                                     {{ form.vol_ifr|add_class:"form-control" }}
                                 </div>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <div class="fieldWrapper">
                                     {{ form.duree_ifr.errors }}
                                     {{ form.duree_ifr.label_tag }}
                                     {{ form.duree_ifr|add_class:"form-control" }}
                                 </div>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Conversion</label>
+                                <input type="text" name="base_10" id="deci_ifr" class="form-control form-control" placeholder="Durée IFR" onkeyup="calculate('ifr');">
                             </div>
                         </div>
                     </div>
@@ -226,19 +237,26 @@
                     </h5>
                     <div id="collapseOne5" class="collapse">
                         <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <div class="fieldWrapper">
+                            <div class="form-group col-md-4">
+                                <div class="fieldWrapper custom-control custom-checkbox">
                                     {{ form.vol_dc.errors }}
-                                    {{ form.vol_dc.label_tag }}
-                                    {{ form.vol_dc|add_class:"form-control" }}
+                                    <input type="checkbox" class="custom-control-input" id="{{ form.vol_dc.id_for_label }}">
+                                    <label class="custom-control-label" for="{{ form.vol_dc.id_for_label }}">{{ form.vol_dc.label }}</label>
+
+                                    {# {{ form.vol_dc.label_tag }} #}
+                                    {# {{ form.vol_dc }} #}
                                 </div>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <div class="fieldWrapper">
                                     {{ form.duree_dc.errors }}
                                     {{ form.duree_dc.label_tag }}
                                     {{ form.duree_dc|add_class:"form-control" }}
                                 </div>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Conversion</label>
+                                <input type="text" name="base_10" id="deci_dc" class="form-control form-control" placeholder="Durée DC" onkeyup="calculate('dc');">
                             </div>
                         </div>
                     </div>
