--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col"></div>
             <div class="col-1">
-                <a class="btn btn-outline-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" href="{% url 'remove_vol' pk=vol.pk %}"><i class="far fa-trash-alt"></i></a>
+                <a class="btn btn-outline-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" href="{% url 'remove_vol' pk=vol.pk %}" onclick="return confirm('Are you sure you want to delete this?')"><i class="far fa-trash-alt"></i></a>
             </div>
         </div>
     </div>
