--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -27,6 +27,12 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap4.min.js"></script>
 
+        <!-- JQuery duration picker -->
+        {% load static %}
+        <link rel="stylesheet" href="{% static "vol/cover.css" %}">
+        <script src="{% static "vol/script.js" %}"></script>
+        <!-- JQuery duration picker -->
+
 
     </head>
     <body>
