--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -3,7 +3,9 @@
 {% block content %}
 {% load widget_tweaks %}
 
-    <div class="container">
+        <div class="row">
+            <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau vol</h2></div>
+        </div>
         <div class="row">
             <div class="col-1">
                 <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="fas fa-pencil-alt"></i></a>
@@ -13,10 +15,8 @@
                 <a class="btn btn-outline-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" href="{% url 'remove_vol' pk=vol.pk %}" onclick="return confirm('Are you sure you want to delete this?')"><i class="far fa-trash-alt"></i></a>
             </div>
         </div>
-    </div>
 
 <hr>
-    <div class="container">
 
         <div class="row">
             <div class="col"></div>
@@ -159,6 +159,4 @@
             </div>
             <div class="col"></div>
         </div>
-        <div class="row"><p></p></div>
-    </div>
 {% endblock %}
